--- a/app/src/debug/AndroidManifest.xml
+++ b/app/src/debug/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application>
-        <activity android:name="com.example.ts_app.activity_my_point"></activity>
+        <activity android:name="com.example.ts_app.scan_qr$activity_my_point"></activity>
     </application>
 </manifest>
